--- a/frontNewProyect/public/index.html
+++ b/frontNewProyect/public/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.tiny.cloud/1/1hyldt9u4byda8tjkhrxwy3zqocdzt2fujo24fy4spgi9wmc/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="container-sm">
 <!-- Place the first <script> tag in your HTML's <head> -->
-
+  <h1 class="text-center fw-bolder">Cargar noticia</h1>
+   <form class="formNoticia my-3">
+    <textarea class="new"></textarea>
+    <button type="submit" class="btn btn-success my-3">Cargar Noticia</button>
+    </form>
     <script>
       tinymce.init({
         selector: 'textarea',
@@ -23,10 +28,6 @@
         ai_request: (request, respondWith) => respondWith.string(() => Promise.reject("See docs to implement AI Assistant")),
       });
     </script>
-   <form class="formNoticia">
-    <textarea class="new"></textarea>
-    <button type="submit">Cargar Noticia</button>
-    </form>
 <script src="scripts.js"></script>
 </body>
 </html>
