--- a/frontNewProyect/public/newNews.html
+++ b/frontNewProyect/public/newNews.html
@@ -30,7 +30,7 @@
 <div class="conteiner text-center mt-4">
   <h2>Nueva noticia</h2>
   <h6>Escribe tu noticia utilizando el editor de textos</h6>
-  <a href="/news.html" class="btn btn-outline-dark"><i class="bi bi-plus-lg"></i>Inicio</a>
+  <button id="inicio"class="btn btn-outline-dark" >inicio</button>
    <!-- Mensaje de éxito (oculto inicialmente) -->
 <div id="message-success" class="alert alert-success" style="display: none;">
   <span class="close-btn" onclick="closeMessage('message-success')">&times;</span>
